login and register google

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,8 +143,8 @@
                     <br>
                     of scientific articles enhanced for readability.
                 </p><br>
-                <a href="/explore" class="btn btn-lg bg-0 border border-white">
-                    Explore &nbsp &#8594;
+                <a href="/read/{{ random_article }}" class="btn btn-lg bg-0 border border-white">
+                    I'm Feeling Lucky &nbsp &#8594;
                 </a>
 
             </div>
