--- a/static/styles.css
+++ b/static/styles.css
@@ -34,6 +34,10 @@ main
     z-index: 1;
 }
 
+.alternate div:nth-child(odd){
+    background: rgb(244, 244, 244);
+}
+
 .tip {
     display:None;
 }
