--- a/static/styles.css
+++ b/static/styles.css
@@ -28,15 +28,13 @@ main
 }
 .or-seperator i {
     padding: 0 10px;
-    background: #f7f7f7;
+    background: #ffffff;
     position: relative;
     top: -11px;
     z-index: 1;
 }
 
-.alternate div:nth-child(odd){
-    background: rgb(244, 244, 244);
-}
+
 
 .tip {
     display:None;
