--- a/templates/login.html
+++ b/templates/login.html
@@ -26,9 +26,9 @@
                     </div>
                     <input type="submit" class="btn btn-outline-primary btn-block border20" value="Log In">
                     <div class="or-seperator"><i>or</i></div>
-                    <a class="btn btn-block btn-social btn-facebook text-white" href = "/login" >
-                        <span class="fa fa-facebook"></span> Sign in with Facebook
-                    </a>
+                    <!--<a class="btn btn-block btn-social btn-facebook text-white" href = "/login" >-->
+                    <!--    <span class="fa fa-facebook"></span> Sign in with Facebook-->
+                    <!--</a>-->
 
                     <a class="btn btn-block btn-social btn-google text-white" href ="/google-login">
                         <span class="fa fa-google"></span> Sign in with Google
