various UI fixes

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -60,7 +60,11 @@
 
                                 </div>
                             </div>
-
+                            <div class="row">
+                                <div class="col-8 pl-1 p-0 mt-3 text-muted">
+                                    {{ method_length }} summaries
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </a>
