--- a/templates/methods.html
+++ b/templates/methods.html
@@ -36,7 +36,7 @@ Methods
             <div>
                 <a class="disabledButton" href="{{ methods[i]['id'] }}" style="font-family: Lato; color: #017bff; font-size: 1.4em; ">{{ methods[i]["name"] }}</a>
             </div>
-            <div class="p-2" style="font-size: 0.95em">
+            <div class="p-2" style="font-size: 0.75em; font-family: Lato;">
                 {{ preview[i]['substr'] }}...
             </div>
         </div>
