fixed registration email href

--- a/templates/register_email.html
+++ b/templates/register_email.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta name="x-apple-disable-message-reformatting">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="telephone=no" name="format-detection">
     <title></title>
 
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,700&display=swap" rel="stylesheet">
@@ -37,7 +34,7 @@
                                                                         <table width="100%" cellspacing="0" cellpadding="0">
                                                                             <tbody>
                                                                                 <tr>
-                                                                                    <td align="center" class="esd-block-image es-p20t es-m-txt-c" style="font-size: 0px;"><a target="_blank" href="https://www.dcyphr.org"><img src="https://hhsbzm.stripocdn.email/content/guids/6890828b-8be9-4474-8591-c31d238b038b/images/19381591455586363.png" alt style="display: block;" width="150"></a></td>
+                                                                                    <td align="center" class="esd-block-image es-p20t es-m-txt-c" style="font-size: 0px;"><a target="_blank" clicktracking='off' href="https://www.dcyphr.org"><img src="https://hhsbzm.stripocdn.email/content/guids/6890828b-8be9-4474-8591-c31d238b038b/images/19381591455586363.png" alt style="display: block;" width="150"></a></td>
                                                                                 </tr>
                                                                             </tbody>
                                                                         </table>
@@ -81,7 +78,7 @@
                                                                                     <td align="center" class="esd-block-button es-p40t es-p40b es-m-txt-c">
 
 
-                                                                                        <span class="msohide es-button-border" style="background-color: #017bff; border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; background-position: initial initial; background-repeat: initial initial;"><a href="{1}" class="es-button" target="_blank" style="text-decoration: none; color: #ffffff; padding: 20px; background-color: #017bff; border-color: #017bff; font-weight: normal; font-family: lato, &quot;helvetica neue&quot;, helvetica, arial, sans-serif; font-size: 16px; border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; border-width: 20px; background-position: initial initial; background-repeat: initial initial;">CONFIRM ACCOUNT</a></span>
+                                                                                        <span class="msohide es-button-border" style="background-color: #017bff; border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; background-position: initial initial; background-repeat: initial initial;"><a clicktracking='off' href={1} class="es-button" target="_blank" style="text-decoration: none; color: #ffffff; padding: 20px; background-color: #017bff; border-color: #017bff; font-weight: normal; font-family: lato, &quot;helvetica neue&quot;, helvetica, arial, sans-serif; font-size: 16px; border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; border-width: 20px; background-position: initial initial; background-repeat: initial initial;">CONFIRM ACCOUNT</a></span>
 
                                                                                     </td>
                                                                                 </tr>
