--- a/templates/password_email.html
+++ b/templates/password_email.html
@@ -37,7 +37,7 @@
                                                                         <table width="100%" cellspacing="0" cellpadding="0">
                                                                             <tbody>
                                                                                 <tr>
-                                                                                    <td align="center" class="esd-block-image es-p20t es-m-txt-c" style="font-size: 0px;"><a target="_blank" href="https://www.dcyphr.org"><img src="https://hhsbzm.stripocdn.email/content/guids/6890828b-8be9-4474-8591-c31d238b038b/images/19381591455586363.png" alt style="display: block;" width="150"></a></td>
+                                                                                    <td align="center" class="esd-block-image es-p20t es-m-txt-c" style="font-size: 0px;"><a clicktracking='off' target="_blank" href="https://www.dcyphr.org"><img src="https://hhsbzm.stripocdn.email/content/guids/6890828b-8be9-4474-8591-c31d238b038b/images/19381591455586363.png" alt style="display: block;" width="150"></a></td>
                                                                                 </tr>
                                                                             </tbody>
                                                                         </table>
@@ -76,7 +76,7 @@
                                                                                     <td align="center" class="esd-block-button es-p40t es-p40b es-m-txt-c">
 
 
-                                                                                        <span class="msohide es-button-border" style="background-color: #017bff; border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; background-position: initial initial; background-repeat: initial initial;"><a href="{}" class="es-button" target="_blank" style="text-decoration: none; color: #ffffff; padding: 20px; background-color: #017bff; border-color: #017bff; font-weight: normal; font-family: lato, &quot;helvetica neue&quot;, helvetica, arial, sans-serif; font-size: 16px; border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; border-width: 20px; background-position: initial initial; background-repeat: initial initial;">Reset Password</a></span>
+                                                                                        <span class="msohide es-button-border" style="background-color: #017bff; border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; background-position: initial initial; background-repeat: initial initial;"><a clicktracking='off' href="{}" class="es-button" target="_blank" style="text-decoration: none; color: #ffffff; padding: 20px; background-color: #017bff; border-color: #017bff; font-weight: normal; font-family: lato, &quot;helvetica neue&quot;, helvetica, arial, sans-serif; font-size: 16px; border-top-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; border-bottom-left-radius: 30px; border-width: 20px; background-position: initial initial; background-repeat: initial initial;">Reset Password</a></span>
 
                                                                                     </td>
                                                                                 </tr>
@@ -87,7 +87,7 @@
                                                                                 </tr>
                                                                                 <tr>
                                                                                     <td align="center" class="esd-block-text es-p20b" esd-links-underline="none" esd-links-color="#017bff">
-                                                                                        <p style="font-size: 20px;"><strong><a target="_blank" style="font-size: 20px; text-decoration: none; color: #017bff;">{confirm_url}</a></strong></p>
+                                                                                        <p style="font-size: 20px;"><strong><a clicktracking='off' target="_blank" style="font-size: 20px; text-decoration: none; color: #017bff;">{confirm_url}</a></strong></p>
                                                                                     </td>
                                                                                 </tr>
                                                                                 <tr>
