added drafting and pending

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -132,12 +132,14 @@
                     </button>
                 </div>
 
-                <form method="POST" >
+                <form method="POST" action="/submission/{{ summary_id }}">
                     <textarea id="summernote" name="summary">{{summary}}</textarea>
-                    <div class="container text-center">
-                        <button class="btn btn-default my-3" type="submit" style="color: white; background-color: DodgerBlue">Submit</button>
+                    <div>
+                        <div class="container text-center">
+                            <button class="btn btn-outline-secondary border20 my-3" type="submit" name="submit_button" value="save">Save</button>
+                            <button class="btn btn-outline-primary border20 my-3" type="submit" name="submit_button" value="finish">Finish</button>
+                        </div>
                     </div>
-
                 </form>
 
             </div>
