removed google login, fixed hemingway eraser, added save draft capability

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -52,11 +52,11 @@
                         <div class="w-100 b20t" style="background: rgba(1, 123, 255, 0.38); height:50%"></div>
                         <div class="p-1 px-4 m-0">
                             <div style="max-height:15vh; min-height:15vh; overflow-y:auto">
-                            <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;"><strong>Methods</strong></h3>
+                            <h3 class="card-title my-1" style="font-family:Lato; font-size:1.5em;"><strong>Glossary</strong></h3>
 
                                 <div class="p-0 m-0 pb-4">
 
-                                    Explore our collection of experimental methods that have been dcyphr-d.
+                                    Explore our collection of experimental terms that have been dcyphr-d.
 
                                 </div>
                             </div>
