--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@ Register
 <br>
 <br>
 <h2 style="font-family: Georgia;">Join dcyphr</h2>
-<div class="p-0 mx-0 w-100" style="">
+<div class="p-0 mx-0 w-100">
     <div class="row">
         <div class="col-sm">
             <div class="card mx-auto border20" style="width: 30rem;">
@@ -55,14 +55,14 @@ Register
                       </label>
                     </div><br>
                     <input type="submit" class="btn btn-outline-primary btn-block border20" value="Continue">
-                    <div class="or-seperator"><i>or</i></div>
+                    <!-- <div class="or-seperator"><i>or</i></div> -->
                     <!--<a class="btn btn-block btn-social btn-facebook text-white" href = "/login" >-->
                     <!--    <span class="fa fa-facebook"></span> Register with Facebook-->
                     <!--</a>-->
 
-                    <a class="btn btn-block btn-social btn-google text-white" href ="/google-register">
+                    <!-- <a class="btn btn-block btn-social btn-google text-white" href ="/google-register">
                         <span class="fa fa-google"></span> Register with Google
-                    </a>
+                    </a> -->
 
                 </form>
             </div>
