--- a/templates/edit.html
+++ b/templates/edit.html
@@ -33,8 +33,9 @@
                 click: function () {
                  // invoke insertText method with 'hello' on editor module.
                 var highlight = $('#summernote').summernote('code');
-                var html = highlight.replace(/adverb|passive|veryHardSentence|complex|hardSentence/, "");
+                var html = highlight.replace(/adverb|passive|veryHardSentence|complex|hardSentence/g, "");
                 $('#summernote').summernote('code', html);
+                
             }
             }  );
 
