--- a/templates/login.html
+++ b/templates/login.html
@@ -25,14 +25,14 @@
                         <input type="password" id="password" class="form-control border20" style="width:100%" name="password">
                     </div>
                     <input type="submit" class="btn btn-outline-primary btn-block border20" value="Log In">
-                    <div class="or-seperator"><i>or</i></div>
+                    <!-- <div class="or-seperator"><i>or</i></div> -->
                     <!--<a class="btn btn-block btn-social btn-facebook text-white" href = "/login" >-->
                     <!--    <span class="fa fa-facebook"></span> Sign in with Facebook-->
                     <!--</a>-->
 
-                    <a class="btn btn-block btn-social btn-google text-white" href ="/google-login">
+                    <!-- <a class="btn btn-block btn-social btn-google text-white" href ="/google-login">
                         <span class="fa fa-google"></span> Sign in with Google
-                    </a>
+                    </a> -->
 
                 </form>
             </div>
