--- a/templates/methods.html
+++ b/templates/methods.html
@@ -11,11 +11,11 @@ Methods
 <div class="container mt-5">
     <div class="text-left pl-3" style="font-size: 1.8em;">
         <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
-        <div class="d-inline ml-2" style="color: #017bff">Methods
+        <div class="d-inline ml-2" style="color: #017bff">Glossary
         {% if session_len != 0 %}
         <button class="btn btn-outline-primary border10" data-target="#newmethod" data-toggle="collapse">+</button></div>
         {% endif %}
-        <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">A collection of methods we have defined to make your experience better!</p>
+        <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">A collection of terms we have defined to make your experience better!</p>
    </div>
    <form action="/addmethod" method="POST" class="collapse text-left" id="newmethod">
     <div class="form-group">
