various UI fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
                     dcyphr
                 </div>
                 <p>
-                    Explore the world's first open-source database
+                    Explore the world's first open edit database
                     <br>
                     of scientific articles enhanced for readability.
                 </p><br>
