--- a/templates/bookmarking.html
+++ b/templates/bookmarking.html
@@ -17,24 +17,24 @@
         <table class="table table-striped contributeTable">
             <thead>
                 <div class="row">
-                    <div class="col" style="font-size: 1.4em; color: #017bff">User</div>
-                    <div class="col" style="font-size: 1.4em; color: #017bff">Article</div>
-                    <div class="col-3" style="font-size: 1.4em; color: #017bff">DOI</div>
-                    <div class="col-3" style="font-size: 1.4em; color: #017bff">Bookmarked Since</div>
-                    <div class="col-3" style="font-size: 1.4em; color: #017bff"></div>
+                    <div class="col-2" style="font-size: 1.4em; color: #017bff">User</div>
+                    <div class="col-5" style="font-size: 1.4em; color: #017bff">Article</div>
+                    <div class="col-2" style="font-size: 1.4em; color: #017bff">DOI</div>
+                    <div class="col-2" style="font-size: 1.4em; color: #017bff">Bookmarked Since</div>
+                    <div class="col" style="font-size: 1.4em; color: #017bff"></div>
                 </div>
                 <!--<th style="color: DodgerBlue">Article</th>-->
                 <!--<th style="color: DodgerBlue">PMID Number</th>-->
             </thead>
             {% for i in range(length) %}
             <form method="POST" class="form">
-            <tr class="">
+            <tr class="row">
                 <div class=" border-top border-bottom row contributeTable" style="line-height: 40px" >
-                    <div class="col" style="font-size: 1em"><a href="/public/{{ info[i]['bookmarked'] }}">{{ info[i]["username"] }}</a></div>
-                    <div class="col" style="font-size: 1em"><a href="/edit/{{ info[i]['id'] }}">{{ info[i]["article"] }}</a></div>
-                    <div class="col-3" style="font-size: 1em">{{ info[i]["doi"] }}</div>
-                    <div class="col-3" style="font-size: 1em">{{ info[i]["bookmarked_date"] }}</div>
-                    <div class="col-3" style="font-size: 1em"><button class="btn btn-link btn-lg" type="submit" value="{{ info[i]['id'] }}" name="unbookmark"><i class="fa fa-bookmark border-0"></i></button></div>
+                    <div class="col-2" ><a href="/public/{{ info[i]['bookmarked'] }}">{{ info[i]["username"] }}</a></div>
+                    <div class="col-5" ><a href="/edit/{{ info[i]['id'] }}">{{ info[i]["article"] }}</a></div>
+                    <div class="col-2" style="overflow-x:hidden">{{ info[i]["doi"] }}</div>
+                    <div class="col-2" >{{ info[i]["bookmarked_date"] }}</div>
+                    <div class="col" ><button class="btn btn-link btn-lg" type="submit" value="{{ info[i]['id'] }}" name="unbookmark"><i class="fa fa-bookmark border-0"></i></button></div>
 
                 </div>
             </tr>
