changed page titles

--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -75,7 +75,7 @@
           });
         </script>
 
-        <title>dcyphr: {% block title %}{% endblock %}</title>
+        <title>dcyphr | {% block title %}{% endblock %}</title>
 
     </head>
 
