--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,7 +67,7 @@
     {% block summernote %}{% endblock %}
 
 
-        <title>dcyphr: {% block title %}{% endblock %}</title>
+        <title>dcyphr | {% block title %}{% endblock %}</title>
 
     </head>
 
