--- a/templates/index.html
+++ b/templates/index.html
@@ -133,23 +133,26 @@
 
 <div class="main">
     <div class="home_page row">
-        <div class="col-lg-7 col-12">
-            <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
-                <div style="letter-spacing:0.1em">
-                    dcyphr
-                </div>
-                <p>
-                    Explore the world's first open edit database
-                    <br>
-                    of scientific articles enhanced for readability.
-                </p><br>
-                <a href="/read/{{ random_article }}" class="btn btn-lg bg-0 border border-white">
-                    I'm Feeling Lucky &nbsp &#8594;
+        <div class="col-3"></div>
+        <div class="col-6">
+            <div class="text-center" style="font-family: Lato">
+                
+                <h1 class="pt-5">
+                    Spend less time reading.<br>
+                    Spend more time discovering.
+                </h1>
+                
+                <a href="/read/{{ random_article }}" class="btn btn-lg bg-0">
+                    I'm Feeling Lucky &rsaquo;
+                </a>
+                <a href="/register" class="btn btn-lg bg-0">
+                    Get Started &rsaquo;
                 </a>
 
             </div>
         </div>
-        <div class="col m-0 p-0">
+        <div class="col-3"></div>
+        <!-- <div class="col m-0 p-0">
             <div class="h-50 row w-100" style="font-family: Lato">
 
             </div>
@@ -157,7 +160,7 @@
                 <source type="image/webp" srcset="{{ url_for('static', filename='gene1.webp') }}">
                 <img class="h-50 w-100 mt-auto" src="{{ url_for('static', filename='gene1.png') }}" alt="">
             </picture>
-        </div>
+        </div> -->
         <a class="ct-btn-scroll ct-js-btn-scroll scroll" id="scroll" href="#section2"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
             width="50" height="50" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M86,6.88c-43.65844,0 -79.12,35.46156 -79.12,79.12c0,43.65844 35.46156,79.12 79.12,79.12c43.65844,0 79.12,-35.46156 79.12,-79.12c0,-43.65844 -35.46156,-79.12 -79.12,-79.12zM86,13.76c39.93625,0 72.24,32.30375 72.24,72.24c0,39.93625 -32.30375,72.24 -72.24,72.24c-39.93625,0 -72.24,-32.30375 -72.24,-72.24c0,-39.93625 32.30375,-72.24 72.24,-72.24zM85.6775,41.1725c-0.14781,0.02688 -0.29562,0.06719 -0.43,0.1075c-1.59906,0.36281 -2.72781,1.80063 -2.6875,3.44v74.175l-21.6075,-21.6075c-0.83312,-0.86 -2.05594,-1.22281 -3.225,-0.9675c-1.29,0.22844 -2.32469,1.16906 -2.6875,2.41875c-0.36281,1.26313 0.01344,2.60688 0.9675,3.49375l27.09,26.9825c0.06719,0.1075 0.13438,0.215 0.215,0.3225l0.215,0.215c0.06719,0.08063 0.13438,0.14781 0.215,0.215c0.04031,0 0.06719,0 0.1075,0c0.22844,0.215 0.48375,0.38969 0.7525,0.5375c0.04031,0 0.06719,0 0.1075,0c0.06719,0.04031 0.14781,0.08063 0.215,0.1075c0.04031,0 0.06719,0 0.1075,0c0.1075,0.04031 0.215,0.08063 0.3225,0.1075c0.36281,0.05375 0.71219,0.05375 1.075,0c0.06719,0 0.14781,0 0.215,0c0.29563,-0.06719 0.59125,-0.17469 0.86,-0.3225c0.45688,-0.22844 0.86,-0.56437 1.1825,-0.9675l27.305,-27.1975c1.37063,-1.37062 1.37063,-3.57437 0,-4.945c-1.37062,-1.37062 -3.57437,-1.37062 -4.945,0l-21.6075,21.6075v-74.175c0.04031,-0.99437 -0.36281,-1.94844 -1.075,-2.62031c-0.72562,-0.68531 -1.70656,-1.02125 -2.6875,-0.92719z"></path></g></g></svg></a>
     </div>
