--- a/templates/explore.html
+++ b/templates/explore.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1 class="my-5 text-left" style="font-family:Lato; font-weight:600">Explore <br> &nbsp<small style="color: #017bff; font-size: 1.75vh"><a href="/browse/0">View all</small></h1>
         <div class="row" style="">
-            {% for i in range(length) %}
+            {% for i in range(tags | length) %}
             <div class="col-12 col-lg-4 col-md-6 p-0 text-left mx-auto mb-5" style="min-height: 45vh;">
                 <a class="" href="/tag/{{ tags[i]['id'] }}/0" style="text-decoration:none;">
                     <div class="h-100 p-0 mx-auto border20" style="width:80%; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); font-family: Lato;">
