--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
 {% endblock %}
 
 {% block navbar %}
-<meta name="description" content="Decentralizing scientific literature. dcyphr makes it easy to read, request, and share distillations of scientific articles. We empower the public to access scientific results directly, save time for researchers and students, and broaden the scientific impact of researchers.">
+<meta name="description" content="dcyphr is revolutionizing the process of reading academic papers through a crowdsourced solution informed by artificial intelligence.">
 <div id="preloader">
     <div id="status" class="text-center">
         <img style="margin-top: 20vh" src="{{ url_for('static', filename='dna.svg') }}" alt="Loading...">
     </div>
 </div>
-<nav class="navbar navbar-expand-md navbar-dark" style="background: #000d25">
+<nav class="navbar navbar-expand-md navbar-dark" style="background-color: rgb(19,19,19) !important; font-family: Lato">
             <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,7 +31,8 @@
                         <!--    </div>-->
                         <!-- </li>-->
                         <li class="nav-item"><a class="nav-link text-white" href="/request">Request</a></li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item"><a class="nav-link text-white" href="/tasks">Contribute</a></li>
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link text-white" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Contribute
                             </a>
@@ -39,7 +40,7 @@
                               <a class="dropdown-item" href="/tasks" style="color: #000d25">Tasks</a>
                               <a class="dropdown-item" href="/suggestions/0" style="color: #000d25">QuickTasks</a>
                             </div>
-                         </li>
+                         </li> -->
                         <!--<li class="nav-item dropdown">-->
                         <!--    <a class="nav-link text-white" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
                         <!--      Help-->
@@ -83,7 +84,7 @@
 
                         <form action="/" method="POST">
                         <div class="nav-item ml-3 mb-1 input-group">
-                            <input class="form-control border border-dark border20" type="text" name="search" placeholder="Search">
+                            <input class="form-control-underlined form-control" style="background-color: rgb(19,19,19)" type="text" name="search" placeholder="Search">
                         </div>
                         </form>
 
@@ -132,37 +133,25 @@
 {% block main %}
 
 <div class="main">
-    <div class="home_page row">
+    <div class="row" style="background-color: rgb(19,19,19); min-height: 60vh;">
         <div class="col-3"></div>
         <div class="col-6">
-            <div class="text-center" style="font-family: Lato">
+            <div class="text-center" style="font-family: Lato;">
                 
-                <h1 class="pt-5">
+                <p class="pt-5 text-white" style="font-weight: 400; font-size: 5vh">
                     Spend less time reading.<br>
                     Spend more time discovering.
-                </h1>
+                </p>
                 
-                <a href="/read/{{ random_article }}" class="btn btn-lg bg-0">
+                <a href="/read/{{ random_article }}" class="btn btn-lg bg-0 text-primary">
                     I'm Feeling Lucky &rsaquo;
                 </a>
-                <a href="/register" class="btn btn-lg bg-0">
+                <a href="/register" class="btn btn-lg bg-0 text-primary">
                     Get Started &rsaquo;
                 </a>
-
             </div>
         </div>
         <div class="col-3"></div>
-        <!-- <div class="col m-0 p-0">
-            <div class="h-50 row w-100" style="font-family: Lato">
-
-            </div>
-            <picture class="h-50 w-100 mt-auto">
-                <source type="image/webp" srcset="{{ url_for('static', filename='gene1.webp') }}">
-                <img class="h-50 w-100 mt-auto" src="{{ url_for('static', filename='gene1.png') }}" alt="">
-            </picture>
-        </div> -->
-        <a class="ct-btn-scroll ct-js-btn-scroll scroll" id="scroll" href="#section2"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-            width="50" height="50" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M86,6.88c-43.65844,0 -79.12,35.46156 -79.12,79.12c0,43.65844 35.46156,79.12 79.12,79.12c43.65844,0 79.12,-35.46156 79.12,-79.12c0,-43.65844 -35.46156,-79.12 -79.12,-79.12zM86,13.76c39.93625,0 72.24,32.30375 72.24,72.24c0,39.93625 -32.30375,72.24 -72.24,72.24c-39.93625,0 -72.24,-32.30375 -72.24,-72.24c0,-39.93625 32.30375,-72.24 72.24,-72.24zM85.6775,41.1725c-0.14781,0.02688 -0.29562,0.06719 -0.43,0.1075c-1.59906,0.36281 -2.72781,1.80063 -2.6875,3.44v74.175l-21.6075,-21.6075c-0.83312,-0.86 -2.05594,-1.22281 -3.225,-0.9675c-1.29,0.22844 -2.32469,1.16906 -2.6875,2.41875c-0.36281,1.26313 0.01344,2.60688 0.9675,3.49375l27.09,26.9825c0.06719,0.1075 0.13438,0.215 0.215,0.3225l0.215,0.215c0.06719,0.08063 0.13438,0.14781 0.215,0.215c0.04031,0 0.06719,0 0.1075,0c0.22844,0.215 0.48375,0.38969 0.7525,0.5375c0.04031,0 0.06719,0 0.1075,0c0.06719,0.04031 0.14781,0.08063 0.215,0.1075c0.04031,0 0.06719,0 0.1075,0c0.1075,0.04031 0.215,0.08063 0.3225,0.1075c0.36281,0.05375 0.71219,0.05375 1.075,0c0.06719,0 0.14781,0 0.215,0c0.29563,-0.06719 0.59125,-0.17469 0.86,-0.3225c0.45688,-0.22844 0.86,-0.56437 1.1825,-0.9675l27.305,-27.1975c1.37063,-1.37062 1.37063,-3.57437 0,-4.945c-1.37062,-1.37062 -3.57437,-1.37062 -4.945,0l-21.6075,21.6075v-74.175c0.04031,-0.99437 -0.36281,-1.94844 -1.075,-2.62031c-0.72562,-0.68531 -1.70656,-1.02125 -2.6875,-0.92719z"></path></g></g></svg></a>
     </div>
 
     <div class="home_page row" id="section2">
@@ -199,7 +188,6 @@
             <div class="h-20">
             </div>
         </div>
-        <a class="ct-btn-scroll ct-js-btn-scroll scroll" id="scroll2" href="#section3" style="bottom:-104vh"><img src="https://img.icons8.com/ios/50/000000/circled-down-2.png"/></a>
     </div>
 
     <div class="home_page row" id="section3">
@@ -271,8 +259,6 @@
                 </div>
             </div>
         </div>
-        <a class="ct-btn-scroll ct-js-btn-scroll scroll" href="#section4" style="bottom:-204vh"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-            width="50" height="50" viewBox="0 0 172 172" style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M86,6.88c-43.65844,0 -79.12,35.46156 -79.12,79.12c0,43.65844 35.46156,79.12 79.12,79.12c43.65844,0 79.12,-35.46156 79.12,-79.12c0,-43.65844 -35.46156,-79.12 -79.12,-79.12zM86,13.76c39.93625,0 72.24,32.30375 72.24,72.24c0,39.93625 -32.30375,72.24 -72.24,72.24c-39.93625,0 -72.24,-32.30375 -72.24,-72.24c0,-39.93625 32.30375,-72.24 72.24,-72.24zM85.6775,41.1725c-0.14781,0.02688 -0.29562,0.06719 -0.43,0.1075c-1.59906,0.36281 -2.72781,1.80063 -2.6875,3.44v74.175l-21.6075,-21.6075c-0.83312,-0.86 -2.05594,-1.22281 -3.225,-0.9675c-1.29,0.22844 -2.32469,1.16906 -2.6875,2.41875c-0.36281,1.26313 0.01344,2.60688 0.9675,3.49375l27.09,26.9825c0.06719,0.1075 0.13438,0.215 0.215,0.3225l0.215,0.215c0.06719,0.08063 0.13438,0.14781 0.215,0.215c0.04031,0 0.06719,0 0.1075,0c0.22844,0.215 0.48375,0.38969 0.7525,0.5375c0.04031,0 0.06719,0 0.1075,0c0.06719,0.04031 0.14781,0.08063 0.215,0.1075c0.04031,0 0.06719,0 0.1075,0c0.1075,0.04031 0.215,0.08063 0.3225,0.1075c0.36281,0.05375 0.71219,0.05375 1.075,0c0.06719,0 0.14781,0 0.215,0c0.29563,-0.06719 0.59125,-0.17469 0.86,-0.3225c0.45688,-0.22844 0.86,-0.56437 1.1825,-0.9675l27.305,-27.1975c1.37063,-1.37062 1.37063,-3.57437 0,-4.945c-1.37062,-1.37062 -3.57437,-1.37062 -4.945,0l-21.6075,21.6075v-74.175c0.04031,-0.99437 -0.36281,-1.94844 -1.075,-2.62031c-0.72562,-0.68531 -1.70656,-1.02125 -2.6875,-0.92719z"></path></g></g></svg></a>
     </div>
 
     <div class="home_page row" id="section4">
@@ -305,7 +291,6 @@
             </div>
         </div>
     </div>
-    <a href="https://icons8.com/icon/26193/scroll-down" class="text-muted">Scroll Down icon by Icons8</a>
-    <!--<a href="https://freesitemapgenerator.com/">Free xml sitemap generator</a>-->
+
 </div>
 {% endblock %}
